--- a/css/styles/navbar.css
+++ b/css/styles/navbar.css
@@ -12,7 +12,6 @@ nav {
 .logo {
     width: 64px;
     height: 64px;
-    /* z-index: 3; */
 }
 
 .logo-large {
@@ -31,6 +30,7 @@ nav {
 
 .navbutton {
     color: var(--text-secondary);
+    min-width: fit-content;
     width: 100%;
     border: none;
     background-color: var(--background-darker);
