--- a/css/styles/page.css
+++ b/css/styles/page.css
@@ -2,26 +2,14 @@
     position: relative;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: calc(100vh - 64px - 48px);
     
     overflow: hidden;
     display: flex;
     flex-direction: row;
 }
 
-.page-content {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background-color: var(--background) !important;
-    z-index: 5;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-}
-
-.page-content>* {
+.page>* {
     animation: fade-in 0.3s ease-in;
 }
 
@@ -29,10 +17,13 @@
     position: absolute;
     min-width: 100%;
     width: 100%;
-    top: 64px;
-    bottom: 48px;
-    left: 0;
+    height: calc(100vh - 64px - 48px);
+    background-color: var(--background) !important;
     overflow: hidden;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .page-parent,
@@ -130,17 +121,12 @@ a:hover { color: rgb(0, 247, 255); }
 }
 
 .header {
-    position: fixed;
     width: 100%;
     height: 64px;
-    top: 0;
-    z-index: 20;
 }
 
 .footer {
-    position: fixed;
     width: 100%;
-    bottom: 0;
     height: 48px;
     color: var(--text-secondary);
     background-color: var(--background-dark);
@@ -148,7 +134,6 @@ a:hover { color: rgb(0, 247, 255); }
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    z-index: 20;
 }
 
 .steam-embed {
