--- a/css/styles/wallpapers.css
+++ b/css/styles/wallpapers.css
@@ -1,5 +1,5 @@
 .wallpaper {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
@@ -7,18 +7,26 @@
     opacity: 0.5;
 }
 
-.wallpaper-about-us {
+.wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+#wallpaper-about-us {
     background-color: rgb(42, 42, 42);
     background-image: url('/images/wallpaper_about_us.jpg');
     background-blend-mode: multiply;
     background-size: 200px;
 }
 
-.wallpaper-home {
+#wallpaper-home {
     background-color: rgb(0, 0, 0);
 }
 
-.wallpaper-blogs {
+#wallpaper-blogs {
     background-color: rgb(42, 42, 42);
     background-image: url('/images/wallpaper_blogs.jpg');
     background-blend-mode: multiply;
